@@ -79,7 +79,7 @@ module glimmer_main
     ! Averaging parameters -------------------------------------
 
     real(rk) :: av_start_time = 0.0 !*FD Holds the value of time from 
-                                    !*FD the last occasion averaging was restarted.
+                                    !*FD the last occasion averaging was restarted (hours)
     integer  :: av_steps      = 0   !*FD Holds the number of times glimmer has 
                                     !*FD been called in current round of averaging.
     ! Averaging arrays -----------------------------------------
@@ -120,6 +120,7 @@ module glimmer_main
   real(rk),parameter :: pi=3.141592654                     !*FD The value of pi
   real(rk),parameter :: years2hours=24.0*days_in_year      !*FD Years to hours conversion factor
   real(rk),parameter :: hours2years=1/years2hours          !*FD Hours to years conversion factor
+  real(rk),parameter :: hours2seconds=3600.0               !*FD Hours to seconds conversion factor
 
   ! Private names -----------------------------------------------
 
@@ -266,7 +267,9 @@ contains
 !================================================================================
 
   subroutine glimmer(params,time,temp,precip,zonwind,merwind,orog, &
-                     output_flag,orog_out,albedo,ice_frac,fw_flux)
+                     output_flag,orog_out,albedo,ice_frac,water_in, &
+                     water_out,elapsed_time,total_water_in,total_water_out, &
+                     ice_volume)
 
     !*FD Main Glimmer subroutine.
     !*FD
@@ -275,10 +278,8 @@ contains
     !*FD spatial and temporal averaging, and calls the dynamics 
     !*FD part of the model when required. 
     !*FD
-    !*FD Input fields should 
-    !*FD be taken as means over the period since the last call, or, 
-    !*FD in the case of precip, the total accumulation since the last call. See
-    !*FD the user documentation for more information.
+    !*FD Input fields should be taken as means over the period since the last call.
+    !*FD See the user documentation for more information.
 
     use glimmer_utils
     use glimmer_mbal
@@ -291,20 +292,26 @@ contains
     type(glimmer_params),            intent(inout) :: params          !*FD parameters for this run
     real(rk),                        intent(in)    :: time            !*FD Current model time        (hours)
     real(rk),dimension(:,:),         intent(in)    :: temp            !*FD Surface temperature field (celcius)
-    real(rk),dimension(:,:),         intent(in)    :: precip          !*FD Precipitation fields  (mm accumulated)
+    real(rk),dimension(:,:),         intent(in)    :: precip          !*FD Precipitation rate        (mm/s)
     real(rk),dimension(:,:),         intent(in)    :: zonwind,merwind !*FD Zonal and meridional components 
-                                                                      !*FD of the wind field (m/s)
+                                                                      !*FD of the wind field         (m/s)
     real(rk),dimension(:,:),         intent(inout) :: orog            !*FD The large-scale orography (m)
-    logical,                optional,intent(out)   :: output_flag     !*FD Set if outputs set
-    real(rk),dimension(:,:),optional,intent(inout) :: orog_out        !*FD The fed-back, output orography
+    logical,                optional,intent(out)   :: output_flag     !*FD Set true if outputs set
+    real(rk),dimension(:,:),optional,intent(inout) :: orog_out        !*FD The fed-back, output orography (m)
     real(rk),dimension(:,:),optional,intent(inout) :: albedo          !*FD surface albedo
     real(rk),dimension(:,:),optional,intent(inout) :: ice_frac        !*FD grid-box ice-fraction
-    real(rk),dimension(:,:),optional,intent(inout) :: fw_flux         !*FD Freshwater flux (mm)
+    real(rk),dimension(:,:),optional,intent(inout) :: water_in        !*FD Input water flux          (mm/s)
+    real(rk),dimension(:,:),optional,intent(inout) :: water_out       !*FD Output water flux         (mm/s)
+    real(rk),               optional,intent(inout) :: elapsed_time    !*FD Time over which output is valid (hours)
+    real(rk),               optional,intent(inout) :: total_water_in  !*FD Area-integrated water flux in (kg)
+    real(rk),               optional,intent(inout) :: total_water_out !*FD Area-integrated water flux out (kg)
+    real(rk),               optional,intent(inout) :: ice_volume      !*FD Total ice volume (m$^3$)
     
     ! Internal variables
 
     integer :: i
-    real(rk),dimension(:,:),allocatable :: albedo_temp,if_temp,fw_temp,orog_out_temp
+    real(rk),dimension(:,:),allocatable :: albedo_temp,if_temp,wout_temp,orog_out_temp,win_temp
+    real(rk) :: twin_temp,twout_temp,icevol_temp
     type(output_flags) :: out_f
 
     ! Reset output flag
@@ -367,20 +374,57 @@ contains
         out_f%ice_frac=.false.
       endif
 
-      if (present(fw_flux)) then
-        fw_flux = 0.0
-        allocate(fw_temp(size(orog,1),size(orog,2)))
-        out_f%fresh_water=.true.
+      if (present(water_out)) then
+        water_out = 0.0
+        allocate(wout_temp(size(orog,1),size(orog,2)))
+        out_f%water_out=.true.
       else
-        out_f%fresh_water=.false.
+        out_f%water_out=.false.
       endif
 
-      ! Calculate averages by dividing by elapsed time,
-      ! except for precip, where we want an accumulated total (mm)
+      if (present(water_in)) then
+        water_in = 0.0
+        allocate(win_temp(size(orog,1),size(orog,2)))
+        out_f%water_in=.true.
+      else
+        out_f%water_in=.false.
+      endif
+
+      ! Reset output total variables and set flags
+
+      if (present(total_water_in))  then
+        total_water_in  = 0.0
+        out_f%total_win = .true.
+      else
+        out_f%total_win = .false.
+      endif
+
+      if (present(total_water_out)) then
+        total_water_out = 0.0
+        out_f%total_wout = .true.
+      else
+        out_f%total_wout = .false.
+      endif
+
+      if (present(ice_volume)) then
+        ice_volume = 0.0
+        out_f%ice_vol = .true.
+      else
+        out_f%ice_vol = .false.
+      endif
+
+      ! Calculate averages by dividing by number of steps elapsed
+      ! since last model timestep.
 
       params%g_av_temp    = params%g_av_temp   /params%av_steps
       params%g_av_zonwind = params%g_av_zonwind/params%av_steps
       params%g_av_merwind = params%g_av_merwind/params%av_steps
+      params%g_av_precip  = params%g_av_precip /params%av_steps
+
+      ! Calculate total accumulated precipitation - multiply
+      ! by time since last model timestep
+
+      params%g_av_precip = params%g_av_precip*(time-params%av_start_time)*hours2seconds
 
       ! Calculate temperature range
 
@@ -393,8 +437,8 @@ contains
                           params%logf_unit,             &
                           time*hours2years,             &
                           params%instances(i),          &
-                          params%g_grid%lats,                  &
-                          params%g_grid%lons,                  &
+                          params%g_grid%lats,           &
+                          params%g_grid%lons,           &
                           params%g_av_temp,             &
                           params%g_temp_range,          &
                           params%g_av_precip,           &
@@ -404,7 +448,11 @@ contains
                           orog_out_temp,                &
                           albedo_temp,                  &
                           if_temp,                      &
-                          fw_temp,                      &
+                          win_temp,                     &
+                          wout_temp,                    &
+                          twin_temp,                    &
+                          twout_temp,                   &
+                          icevol_temp,                  &
                           out_f)
 
         ! Add this contribution to the output orography
@@ -439,16 +487,41 @@ contains
            end where
         endif
 
-        if (present(fw_flux)) then
+        if (present(water_in)) then
            where (params%cov_normalise==0.0) 
-              fw_flux=0.0
+              water_in=0.0
            elsewhere
-              fw_flux=fw_flux+(fw_temp* &
+              water_in=water_in+(win_temp* &
                    params%instances(i)%frac_coverage/ &
                    params%cov_normalise)
            end where
         endif
+
+        if (present(water_out)) then
+           where (params%cov_normalise==0.0) 
+              water_out=0.0
+           elsewhere
+              water_out=water_out+(wout_temp* &
+                   params%instances(i)%frac_coverage/ &
+                   params%cov_normalise)
+           end where
+        endif
+
+        ! Add total water variables to running totals
+
+        if (present(total_water_in))  total_water_in =total_water_in +twin_temp
+        if (present(total_water_out)) total_water_out=total_water_out+twout_temp
+        if (present(ice_volume))      ice_volume=ice_volume+icevol_temp
+
       enddo
+
+      ! Scale output water fluxes to be in mm/s
+
+      if (present(water_in)) water_in=water_in/ &
+                        ((time-params%av_start_time)*hours2seconds)
+
+      if (present(water_out)) water_out=water_out/ &
+                        ((time-params%av_start_time)*hours2seconds)
 
       ! ---------------------------------------------------------
       ! Reset averaging fields, flags and counters
@@ -471,7 +544,8 @@ contains
 
     if (allocated(albedo_temp))   deallocate(albedo_temp)
     if (allocated(if_temp))       deallocate(if_temp)
-    if (allocated(fw_temp))       deallocate(fw_temp)
+    if (allocated(wout_temp))     deallocate(wout_temp)
+    if (allocated(win_temp))      deallocate(win_temp)
     if (allocated(orog_out_temp)) deallocate(orog_out_temp)
 
   end subroutine glimmer
