@@ -1,3 +1,8 @@
+2004-05-24 Ian Rutt
+ * Sorted out input and output arrays of water flux, and added diagnostic
+	outputs of total water fluxes and ice sheet volume.
+ * Fixed ice model so that ice thickness isn't accumulated twice on first time-step.
+
 2004-05-19 Ian Rutt
  * Fixed problem with array sizes in glimmer.f90. Here, the size of
 	temporary arrays was based on the size of optional arguments,
